--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "tareq1988/wp-eloquent",
+    "name": "southcoastweb/wp-eloquent",
     "description": "Eloquent ORM for WordPress",
     "keywords": ["wordpress", "plugin", "orm", "eloquent", "sql"],
-    "homepage": "https://github.com/tareq1988/wp-eloquent",
+    "homepage": "https://github.com/southcoastweb/wp-eloquent",
     "require": {
         "illuminate/database": "^5.4",
         "illuminate/pagination": "^5.4"
@@ -10,13 +10,17 @@
     "license": "GPL-2.0-or-later",
     "authors": [
         {
+            "name": "Craig Riley",
+            "email": "c.riley@dsmdesign.co.uk"
+        },
+        {
             "name": "Tareq Hasan",
             "email": "tareq@wedevs.com"
         }
     ],
     "autoload" : {
       "psr-4" : {
-        "WeDevs\\ORM\\": "src/"
+        "Southcoastweb\\WpEloquent\\": "src/"
       }
     }
 }
